create cigar
